overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 header {
